--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+.all-cards{
+  grid-template-columns: repeat(3, 1fr);
+  display: grid;
+}
+
 .post-card{
  color:rgb(59, 65, 70);
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -8,7 +13,8 @@
   margin: 10px;
   width: 30rem;
   height: 10rem;
-  grid-template-columns: repeat(auto-fill, 250px);
+  grid-column-start: 2;
+  grid-column-end: 3;
   display: grid;
   align-items: center;
   justify-items: center;
@@ -18,6 +24,18 @@
   }
 #App h1{
     font-family: montserrat;
-    font-size: 58px;
+    font-size: 40px;
     color: #109467;
+    text-align: center;
+    padding: 10px;
+}
+
+.navbar{
+  font-family: montserrat;
+  font-size: 25px;
+  color: aliceblue;
+  padding: 10px;
+  box-shadow: 5px 5px 0px rgb(170, 170, 170);
+  background-color: #109467;
+  
 }
