--- a/public/index.css
+++ b/public/index.css
@@ -5,13 +5,15 @@
 
 .post-card{
  color:rgb(59, 65, 70);
+ font-family: montserrat;
+ font-size: 14px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
   border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
-  width: 30rem;
+  padding: 5px;
+  margin: 9px;
+  width: 19rem;
   height: 10rem;
   grid-column-start: 2;
   grid-column-end: 3;
@@ -37,3 +39,46 @@
   box-shadow: 5px 5px 0px rgb(170, 170, 170);
   background-color: #109467; 
 }
+
+
+/* Messages */
+.posts-main-container{
+  grid-template-columns: repeat(3, 1fr);
+  display: grid;
+}
+
+#App h2{
+  font-family: montserrat;
+  font-size: 30px;
+  color: #13523d;
+  grid-column-start:1;
+  grid-column-end: 4;
+  text-align: center;
+  
+  padding: 20px;
+}
+
+.messages-main-container{
+  grid-template-columns: repeat(3, 1fr);
+  display: grid;
+}
+
+.messages-card{
+ color:rgb(59, 65, 70);
+ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  width: 30rem;
+  height: 10rem;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+.messages-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+ }
